dcba-backend-deployment.yml
# ------------------------------- DCBA Backend Deployment ------------------------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcba-backend
  namespace: tango-development
  labels:
    app: dcba-backend
    type: back-end
spec:
  replicas: 2
  selector:
    matchLabels:
      type: back-end
  template:
    metadata:
      labels:
        app: dcba-backend
        type: back-end
    spec:
      imagePullSecrets:
        - name: regcred
      
      containers:
        - name: dcba-backend
          image: harbor.tango.rid-intrasoft.eu/dcba/dcba-backend:latest-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
# ------------------------------- DCBA Backend Service ------------------------------- #
apiVersion: v1
kind: Service
metadata:
  name: dcba-backend
  namespace: tango-development
  labels:
    app: dcba-backend
spec:
  selector:
    app: dcba-backend
  type: NodePort
  ports:
    - port: 3001       # Port exposed in the internal cluster (external pod port)
      targetPort: 3000 # The dcba-backend continer port (internal pod port)

---
# ------------------------------- MongoDB Deployment ------------------------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcba-mongo-db
  namespace: tango-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dcba-mongo-db
  template:
    metadata:
      labels:
        app: dcba-mongo-db
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: dcba-mongo-db
          image: harbor.tango.rid-intrasoft.eu/dcba/dcba-mongo-db:latest-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db/devices
      volumes:
        - name: mongo-storage
          emptyDir: {}

---
# ------------------------------- MongoDB Service ------------------------------- #
apiVersion: v1
kind: Service
metadata:
  name: dcba-mongo-db
  namespace: tango-development
  labels:
    app: dcba-mongo-db
spec:
  selector:
    app: dcba-mongo-db
  ports:
    - port: 27018       # Port exposed in the internal cluster (external pod port)
      targetPort: 27017 # The mongo-db continer port (internal pod port)

---
# ------------------------------- InfluxDB Deployment ------------------------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcba-influx-db
  namespace: tango-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dcba-influx-db
  template:
    metadata:
      labels:
        app: dcba-influx-db
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: dcba-influx-db
          image: harbor.tango.rid-intrasoft.eu/dcba/dcba-influx-db:latest-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8086

---
# ------------------------------- InfluxDB Service ------------------------------- #
apiVersion: v1
kind: Service
metadata:
  name: dcba-influx-db
  namespace: tango-development
  labels:
    app: dcba-influx-db
spec:
  selector:
    app: dcba-influx-db
  ports:
    - port: 8087       # Port exposed in the internal cluster (external pod port)
      targetPort: 8086 # The InfluxDB continer port (internal pod port)
