dcba-server-deployment.yml
---
apiVersion: v1
kind: Service 
metadata:
  name: dcba-server
  namespace: tango-development
  labels:
    app: dcba-server
spec:
  selector:
    app: dcba-server
  type: NodePort
  ports:
  - port: 80          # The port that the Service will expose externally 
    targetPort: 3000  # The port on the container that the Service will forward traffic to
