dcba-backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcba-backend-ingress-rule
  namespace: tango-development
  labels: 
    app: back-end
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s-cluster.tango.rid-intrasoft.eu
      secretName: dcba-backend-cert-tls
  rules:
    - host: k8s-cluster.tango.rid-intrasoft.eu
      http:
        paths:
          - path: /development/dcba-backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dcba-backend
                port:
                  number: 3001
          - path: /ws(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dcba-backend
                port:
                  number: 3001
