dcba-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcba-backend-ingress-rule  # Name of the ingress resource
  namespace: tango-development     # Namespace where the ingress resource is deployed
  labels: 
    app: back-end                  # Label to categorize the resource for the application
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"       # Enables regular expression-based path matching
    nginx.ingress.kubernetes.io/rewrite-target: /$2     # Rewrites the incoming request path, preserving the captured groups
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Specifies the cluster issuer for Let's Encrypt certificate management
    kubernetes.io/ingress.class: "nginx"                # Specifies the ingress controller to be used, in this case, NGINX
    
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"  # Defines the timeout for reading a response from the proxied server (in seconds)
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"  # Defines the timeout for sending data to the proxied server (in seconds)
    nginx.ingress.kubernetes.io/enable-websocket: "true"    # Enables WebSocket support for the ingress

spec:
  ingressClassName: nginx  # Defines the class of the ingress (nginx in this case)
  tls:
    - hosts:
        - k8s-cluster.tango.rid-intrasoft.eu  # The domain for which TLS is being configured
      secretName: dcba-backend-cert-tls       # Name of the secret containing the TLS certificate

  rules:
    - host: k8s-cluster.tango.rid-intrasoft.eu  # Defines the domain for the ingress rule
      http:
        paths:
          - path: /development/dcba-backend(/|$)(.*)  # Regex path matching, captures the rest of the URL after this prefix
            pathType: ImplementationSpecific          # Allows path matching based on the ingress controller's specific implementation
            backend:
              service:
                name: dcba-backend  # The name of the service that will handle the request
                port:
                  number: 3001      # The port on the backend service to route traffic to
